# xiloswitcher

./: README.md  pyproject.toml
examples/xiloswitcher_example/: pyproject.toml
examples/xiloswitcher_example/src/: main.py
src/flutter/xiloswitcher/: README.md  pubspec.yaml
src/flutter/xiloswitcher/lib/: xiloswitcher.dart
src/flutter/xiloswitcher/lib/src/: create_control.dart  xiloswitcher.dart
src/xiloswitcher/: xiloswitcher.py
src/xiloswitcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
